# agentloop-rs

./: CLAUDE.md  Cargo.toml  README.md  agentloop.yaml  install.sh
crates/agentloop-acp-bridge/: Cargo.toml
crates/agentloop-acp-bridge/src/: main.rs
crates/agentloop-bridge/: Cargo.toml
crates/agentloop-bridge/src/: lib.rs
crates/agentloop-cli/: Cargo.toml
crates/agentloop-cli/src/: main.rs
crates/agentloop-core/: Cargo.toml
crates/agentloop-core/src/: config.rs  errors.rs  lib.rs  server.rs  session.rs
crates/agentloop-server/: Cargo.toml
crates/agentloop-server/src/: main.rs
crates/zed-agentloop/: Cargo.toml  extension.toml  extension.wasm
crates/zed-agentloop/src/: lib.rs
examples/: basic_usage.rs  event_handling.rs  zed_integration.rs
src/: main.rs
