[package]
name = "agentloop-cli"
version = "0.1.0"
edition = "2021"
description = "AgentLoop CLI client - connects to server via UNIX socket"

[[bin]]
name = "agentloop"
path = "src/main.rs"

[dependencies]
agentloop-bridge = { path = "../agentloop-bridge" }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# JSON-RPC
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI and TUI
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# IO
futures = "0.3"