[package]
name = "agentloop-core"
version = "0.1.0"
edition = "2021"
description = "Shared types and configuration for AgentLoop client bridge"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
config = "0.14"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.12"
