[package]
name = "agentloop-server"
version = "0.1.0"
edition = "2021"
description = "AgentLoop server binary - long-running UNIX socket server"

[[bin]]
name = "agentloop-server"
path = "src/main.rs"

[dependencies]
agentloop-core = { path = "../agentloop-core" }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"

# Configuration
config = "0.14"